--- a/src/app/components/gestion-reuniones/gestion-reuniones.component.html
+++ b/src/app/components/gestion-reuniones/gestion-reuniones.component.html
@@ -1,16 +1,13 @@
-<!-- Header -->
 <div id="header" class="text-center bg-image">
     <div class="mask">
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white">
-      
           <h1 class="mb-3">Gestion de reuniones</h1>
-           <!-- Breadcrumb -->
            <nav class="d-flex">
             <h6 class="mb-0">
-              <a  [routerLink]="['principal/Administrador']" class="text-reset">Home</a>
+              <a routerLink="/principal/Administrador" class="text-reset">Home</a>
               <span>/</span>
-              <a href="#" class="text-reset">Gestion Reuniones</a>
+              <a routerLink="/principal/Administrador/gestionReuniones" class="text-reset">Gestion Reuniones</a>
             </h6>
           </nav>
           <!-- Breadcrumb -->
